# eniak

./: .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  railway.json
apps/api/: alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 6915993508b2_phase5_books_and_publish_records.py  9eef2ff220cc_initial_schema.py
apps/api/src/eniak_api/: __init__.py  app.py  config.py  rate_limit.py  security.py
apps/api/src/eniak_api/routers/: books.py  meta.py  review.py  runs.py
apps/api/tests/: conftest.py  test_dry_run.py  test_phase5.py
apps/web/: .env.example  next.config.mjs  open-next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  wrangler.jsonc  wrangler.toml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/books/: route.ts
apps/web/src/app/api/books/[id]/publish/: route.ts
apps/web/src/app/api/chapters/[id]/: route.ts
apps/web/src/app/api/runs/: route.ts
apps/web/src/app/api/runs/[id]/cards/[cardId]/: route.ts
apps/web/src/app/books/: page.tsx
apps/web/src/app/books/[id]/: page.tsx
apps/web/src/app/runs/[id]/: page.tsx
apps/web/src/components/: BookForm.tsx  ChapterReviewPanel.tsx  EvidenceCardItem.tsx  RunForm.tsx  RunList.tsx  StatusPill.tsx
apps/web/src/lib/: api-types.ts  api.ts  server-api.ts
docs/: DEPLOY.md  brainstorm.md  plan.md  references.md
infra/cloudflare/: deploy_proxy_worker.sh  eniak-api-proxy.js
infra/docker/: docker-compose.dev.yml
infra/scripts/: cf_dns_setup.sh
refs/: MANIFEST.json  README.md
