[project]
name = "eniak-api"
version = "0.0.1"
description = "ENIAK FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "eniak-evidence[postgres,sqlite]",
    "eniak-radar",
    "eniak-orchestrator",
    "eniak-writer",
    "eniak-publisher",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.20",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eniak_api"]
